// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter length 0 1`] = `
<div>
  <small
    class="App__counter"
  />
</div>
`;

exports[`Counter length 123 1`] = `
<div>
  <small
    class="App__counter"
  >
    123
  </small>
</div>
`;
